# refractulator

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: example_usage.py
refractulator/: __init__.py  calculate.py
tests/: test_calculate.py
