# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refractulator"
version = "0.2.0-beta.1"  # Update this as per your release cycle
description = "A package to calculate and visualize light interactions with water droplets."
readme = "README.md"
authors = [
  { name = "Scott Kilgore", email = "kilgore.scott+github@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
]
optional-dependencies = {
  visualization = ["plotly"]
}
urls = {
  "Homepage" = "https://github.com/ScottTpirate/refractulator",
  "Documentation" = "https://github.com/ScottTpirate/refractulator#readme",
}

[tool.setuptools.packages.find]
exclude = ["tests", "examples", "docs"]


[tool.setuptools_scm]
write_to = "refractulator/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
